src/assets/tailwind.css
@import url('https://rsms.me/inter/inter.css');
html { font-family: 'Inter', sans-serif; }
@supports (font-variation-settings: normal) {
  html { font-family: 'Inter var', sans-serif; }
}

@tailwind base;

@tailwind components;

@tailwind utilities;

* {
    font-family: 'Inter', sans-serif;
}

nav > ul > li {
    @apply my-2;
}
nav > ul > li > a {
    @apply mx-3 px-3 py-2 text-lg font-medium text-gray-800 rounded-xl;
}
@screen md {
    nav > ul > li {
        @apply my-0;
    }
    nav > ul > li > a {
        @apply text-base;
    }
}
nav > ul > li > a:hover {
    @apply text-teal-500 bg-teal-100;
}
nav > ul > li > a.router-link-active {
    @apply text-white bg-teal-500;
}

hr {
    @apply w-full;
}

.footer\:links {
    @apply py-4 md:py-0 px-0 md:pr-20 text-center md:text-left;
}
.footer\:links > p {
    @apply text-gray-500;
}
.footer\:links > ul {
    @apply mt-2;
}
.footer\:links > ul > li > a:hover {
    @apply text-gray-500;
}

